Little bit of styling and moved code from loop to individual functions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Dev Game</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="styles/game.css">
 </head>
 <body>
