addes fastclick js for a better ios experience

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div id="FlappyDevGame"></div>
 
+    <script src="scripts/lib/fastclick.js"></script>
     <script src="scripts/flappy_engine.js"></script>
     <script src="scripts/my_game.js"></script>
 </body>
