Sound with jsfx

--- a/index.html
+++ b/index.html
@@ -10,8 +10,33 @@
 
     <div id="FlappyDevGame"></div>
 
-    <script src="scripts/lib/fastclick.js"></script>
+
+    <script src="scripts/lib/fastclick/fastclick.js"></script>
+    <script src="scripts/lib/jsfx/audio.js"></script>
+    <script src="scripts/lib/jsfx/jsfx.js"></script>
+    <script src="scripts/lib/jsfx/jsfxlib.js"></script>
     <script src="scripts/flappy_engine.js"></script>
     <script src="scripts/my_game.js"></script>
+
+
+<script>
+
+
+
+
+
+
+
+
+
+// sounds?
+// ["square",2.0000,0.0590,0.0000,0.0100,0.5520,0.1560,20.0000,1069.0000,2400.0000,0.0000,0.0000,0.0000,0.0100,0.0003,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,1.0000,0.0000,0.0000,0.0000,0.0000]
+//["square",0.0000,0.4000,0.0000,0.1600,0.0000,0.1400,20.0000,526.0000,2400.0000,0.2540,0.0000,0.0000,0.0100,0.0003,0.0000,0.0000,0.0000,0.5000,0.0000,0.0000,0.0000,0.0000,0.6680,0.0000,0.0000,0.0000,0.0000]
+
+
+</script>
+
+
+
 </body>
 </html>
